--- a/index.html
+++ b/index.html
@@ -21,10 +21,28 @@
         <nav class="navigation slide-menu">
         <a class="close-btn i-close" href="#main-menu"><span>Close</span></a>
           <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">About</a>
+                <ul>
+                  <li><a href="#">What We do</a></li>
+                  <li><a href="#">Who We Are</a></li>
+                  <li><a href="#">News and Events</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Our Programs</a>
+                <ul>
+                  <li><a href="#">Law</a></li>
+                  <li><a href="#">Leadership</a></li>
+                  <li><a href="#">Mentor</a></li>
+                  <li><a href="#">Other Programs</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Get Involved</a>
+                <ul>
+                  <li><a href="#">Donate</a></li>
+                  <li><a href="#">Volunteer</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Donate</a></li>
           </ul>
         </nav>
       </header><!-- /header -->
