--- a/index.html
+++ b/index.html
@@ -13,38 +13,43 @@
   <div class="site-wrapper" data state="slide-closed">
     <div class="sliding-canvas">
       <header class="header">
-        <h1>Push Menu</h1>
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1 l-1-4">
+            <h1>Push Menu</h1>
+          </div>
 
-          <!-- Menu Toggle Icon -->
-        <a class="toggle-btn i-menu" href="#main-menu"><span>Menu</span></a>
+          <div class="unit xs-1 s-1 m-1 l-3-4">
+            <!-- Menu Toggle Icon -->
+            <a class="toggle-btn i-menu" href="#main-menu"><span>Menu</span></a>
 
-        <nav class="navigation slide-menu">
-        <a class="close-btn i-close" href="#main-menu"><span>Close</span></a>
-          <ul>
-              <li><a href="#">About</a>
-                <!--<ul>
-                  <li><a href="#">What We do</a></li>
-                  <li><a href="#">Who We Are</a></li>
-                  <li><a href="#">News and Events</a></li>
-                </ul>-->
-              </li>
-              <li><a href="#">Our Programs</a>
-                <!--<ul>
-                  <li><a href="#">Law</a></li>
-                  <li><a href="#">Leadership</a></li>
-                  <li><a href="#">Mentor</a></li>
-                  <li><a href="#">Other Programs</a></li>
-                </ul>-->
-              </li>
-              <li><a href="#">Get Involved</a>
-                <!--<ul>
+            <nav class="navigation slide-menu">
+            <a class="close-btn i-close" href="#main-menu"><span>Close</span></a>
+              <ul>
+                  <li><a href="#">About</a>
+                    <!--<ul>
+                      <li><a href="#">What We do</a></li>
+                      <li><a href="#">Who We Are</a></li>
+                      <li><a href="#">News and Events</a></li>
+                    </ul>-->
+                  </li>
+                  <li><a href="#">Our Programs</a>
+                    <!--<ul>
+                      <li><a href="#">Law</a></li>
+                      <li><a href="#">Leadership</a></li>
+                      <li><a href="#">Mentor</a></li>
+                      <li><a href="#">Other Programs</a></li>
+                    </ul>-->
+                  </li>
+                  <li><a href="#">Get Involved</a>
+                    <!--<ul>
+                      <li><a href="#">Donate</a></li>
+                      <li><a href="#">Volunteer</a></li>
+                    </ul>-->
+                  </li>
                   <li><a href="#">Donate</a></li>
-                  <li><a href="#">Volunteer</a></li>
-                </ul>-->
-              </li>
-              <li><a href="#">Donate</a></li>
-          </ul>
-        </nav>
+              </ul>
+            </nav>
+          </div>
       </header><!-- /header -->
 
       <main>
