--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
 	<meta charset="utf-8">
-	<title>Push Menus</title>
+	<title>FLY Program</title>
 	<link href="https://file.myfontastic.com/MGBNLMU3WjcpkEBDsk5FqN/icons.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<meta name="handheldfriendly" content="true">
@@ -15,7 +15,7 @@
       <header class="header">
         <div class="grid">
           <div class="unit xs-1 s-1 m-1 l-1-4">
-            <h1>Push Menu</h1>
+            <h1>FLY Program</h1>
           </div>
 
           <div class="unit xs-1 s-1 m-1 l-3-4">
